<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PXing+</string>
	<string name="pxing_all_desp">pxing all</string>
	<string name="pxing_webview_desp">pxing webview</string>
	<string name="pxing_main_list_desp">pxing 主列表</string>
	<string name="pxing_media_player_desp">pxing 播放本地音频</string>
	<string name="pxing_video_desp">pxing 播放本地视频</string>
	<string name="pxing_sex_novel_list_desp">pxing sex列表</string>
	<string name="pxing_main_grid_desp">pxing 主列表grid</string>
	<string name="pxing_left_menu_list_desp">pxing left menu</string>
	<string name="pxing_slide_menu_desp">pxing slide menu</string>
	<string name="pxing_search_desp">pxing search</string>
	<string name="pxing_search_list_desp">pxing search列表</string>
	<string name="pxing_titlebar_list_desp">pxing titlebar</string>
	<string name="pxing_titlebar_search_desp">pxing titlebar search</string>
	<string name="pxing_image_list_desp">pxing 看图</string>
	<string name="pxing_image_foot_desp">pxing 看图foot</string>
	<string name="pxing_image_pager_list_desp">pxing 看图pager</string>
	<string name="pxing_tab_list_desp">pxing tab</string>
	<string name="pxing_app_slide_menu_desp">pxing app slide menu</string>
	<string name="pxing_collection_grid_list_desp">pxing collection grid</string>
	<string name="pxing_history_grid_list_desp">pxing 浏览历史</string>
	<string name="pxing_history_horizontal_list_desp">pxing 浏览历史横向list 列表</string>
	<string name="pxing_history_list_horizontal_list_desp">pxing 浏览历史list+横向list</string>
	<string name="pxing_pc_nav_grid_list_desp">pxing pc 性感grid列表</string>
	<string name="pxing_pc_slide_menu_desp">pxing pc slide menu</string>
	<string name="pxing_pc_focus_pager_desp">pxing pc pager</string>
	<string name="pxing_pc_image_list_desp">pxing pc看图</string>
	<string name="pxing_pc_image_pager_list_desp">pxing pc看图pager</string>
	<string name="pxing_weex_main_desp">pxing weex main</string>
	<string name="pxing_weex_nav_desp">pxing weex  nav</string>
	<string name="pxing_main_top_pager_f_desp">pxing m首页pager</string>
	<string name="pxing_main_grid_f_desp">pxing m首页grid</string>
	<string name="pxing_rank_expend_grid_f_desp">pxing m分类标签</string>
	<string name="pxing_rank_tag_list_f_desp">pxing m 分类标签tag</string>
	<string name="pxing_qq_auth_login_desp">pxing m qq授权登陆</string>
	<string name="pxing_qq_share_desp">pxing m qq空间</string>
	<string name="pxing_qzone_share_desp">pxing m qq好友</string>
	<string name="pxing_weixin_wxapi_desp">pxing wxapi</string>
	<string name="pxing_weixin_send_to_wx_desp">pxing sendtowx</string>
	
	<string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="set_alias">设置别名</string>
    <string name="unset_alias">撤销别名</string>
    <string name="set_account">设置帐号</string>
    <string name="unset_account">撤销帐号</string>
    <string name="subscribe_topic">订阅标签</string>
    <string name="unsubscribe_topic">撤销标签</string>
    <string name="set_accept_time">设置时间</string>
    <string name="pause_push">暂停推送</string>
    <string name="resume_push">恢复推送</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_passthrough_message"> Receive a passthrough message. Content is \"%1$s\"</string>
    <string name="click_notification_message"> Clicked a notification message. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> Arrived a notification message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>
	
    <string name="str_image_local">本地图片</string>
	<string name="str_image_net">网络图片</string>
	<string name="qqshare_imageUrl_lable">imageUrl</string>
    <string name="publish_videoPath_lable">videoPath</string>
	<string name="qqshare_imageUrl_content">http://inews.gtimg.com/newsapp_bt/0/876781763/1000</string>
    <string name="str_default_share">默认</string>
    <string name="str_audio_share">音乐分享</string>
    <string name="str_image_share">纯图分享</string>
    <string name="str_app_share">应用分享</string>
    <string name="str_image_text_share">分享</string>
    <string name="str_publish_mood">说说</string>
    <string name="str_publish_video">视频</string>
    <string name="str_share_type">内容类型: </string>
    <string name="share_prize_id">活动id</string>
    <string name="share_prize_id_hint">填写活动id，不能为空</string>
    <string name="special_qzone_action">QQ空间: </string>
    <string name="default_qzone_dialog">Qzone弹窗</string>
    <string name="qzone_item_hide">Qzone隐藏</string>
    <string name="qqshare_title_hint">input title</string>
    <string name="qqshare_title_content">腾讯新闻分享标题</string>
    <string name="qqshare_summary_hint">input summary</string>
    <string name="qqshare_summary_content">新闻分享摘要内容,这里是QQ分享摘要测试, 字数不够? 再加点?</string>
    <string name="qqshare_audio_url_lable">audio url</string>
    <string name="qqshare_audioUrl_hint">input music url</string>
    <string name="qqshare_audioUrl_content">http://mr3.douban.com/201307291529/13a106d9b49a9a8446fd3c18f77dc395/view/song/small/p8508.mp3</string>
    <string name="qqshare_targetUrl_lable">targetUrl</string>
    <string name="qqshare_targetUrl_hint">input target url</string>
    <string name="qqshare_targetUrl_content">http://www.qq.com/</string>
    <string name="qqshare_imageUrl_hint">input image url</string>
    <string name="qqshare_appName_lable">app name</string>
    <string name="qqshare_appName_hint">input app name</string>
    <string name="qqshare_appName_content">测试应用</string>
    <string name="qzoneshare_title_content">空间分享测试</string>
    <string name="qzoneshare_summary_content">分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动</string>
    
	<!--原图获取  stev add-->
	<string name="str_album_list">相册列表</string>
	<string name="str_photo_list">照片列表</string>
	<string name="str_add_album">创建相册</string>
	<string name="str_upload_photo">上传照片</string>
	
	<!-- WPA用户状态 add -->
	<string name= "str_wpa_input_uin">请输入对方qq号</string>
	<string name= "qq_group_dialog_title">输入参数</string>
	<string name= "qq_group_description">在下面的输入框填入加群Key\n
	    Key请到qun.qq.com申请\n</string>
	<string name= "label_description">在下面的输入框输入标签值</string>   
	<string name= "threadid_description">在下面的输入框输入主题ID</string>
	<string name="str_file_local">本地文件</string>  
	
	<string name="msg">msg:</string>
    <string name="msg_hint">请输入msg</string>
    <string name="summary">summary:</string>
    <string name="targetUrl">targetUrl:</string>
    <string name="targetUrl_hint">Input targetUrl</string>
    <string name="summary_hint">Input summary</string>
    <string name="type">type:</string>
    <string name="type_hint">Input type</string>
    <string name="url">url:</string>
    <string name="url_hint">Input url</string>
    <string name="playurl">playurl:</string>
    <string name="playurl_hint">Input playurl</string>
    <string name="openid_hint">Input openid</string>
    <string name="openid">receiver:</string>
    <string name="add_openid">click to add</string>
    <string name="title_activity_return">ReturnActivity</string>
    <string name="title_activity_auth">授权</string>
    <string name="title_activity_assist">Assist</string>
    
     <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    
    <string name="send_to_wx_title">发送到微信</string>
	<string name="get_from_wx_title">从微信接收</string>
	<string name="show_from_wx_title">显示微信请求的消息</string>

	<string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unsupported">不支持错误</string>
	<string name="errcode_unknown">发送返回</string>
	
	 <string name="target_scene">目标场景</string>
    <string name="target_scene_session">会话</string>
    <string name="target_scene_timeline">朋友圈</string>
    <string name="target_scene_favorite">收藏</string>
    <string name="send">发送到微信</string>
	<string name="receive">从微信接收</string>
	
	<string name="is_timeline">是否分享到朋友圈</string>
	<string name="send_text">发送文本</string>
	<string name="send_text_default">这段文字发送自微信SDK示例程序</string>
	
	<string name="send_img">发送图片</string>
	<string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <!-- <item>发送图片的URL</item> -->
    </string-array>
	<string name="send_img_file_not_exist">文件不存在</string>
	
	<string name="send_pic">发送照片</string>
	
	<string name="send_music">发送音乐</string>
	<string-array name="send_music_item">
	    <item>发送音乐url</item>
	    <item>发送低带宽音乐url</item>
	</string-array>

	<string name="send_video">发送视频</string>
	<string-array name="send_video_item">
	    <item>发送视频url</item>
	    <item>发送低带宽视频url</item>
	</string-array>
	
	<string name="send_webpage">发送网页</string>
	<string-array name="send_webpage_item">
	    <item>发送网页url</item>
	</string-array>
    <string name="send_appbrand">发送小程序</string>
    <string-array name="send_appbrand_item">
        <item>发送小程序</item>
    </string-array>
	<string name="send_appdata">发送app消息</string>
	<string-array name="send_appdata_item">
	    <item>发送app文件本地路径</item>
	    <item>发送app二进制数据</item>
	    <item>发送无附件的app</item>
	</string-array>
	
	<string name="send_emoji">发送表情消息</string>
	<string-array name="send_emoji_item">
	    <item>发送表情本地路径</item>
	    <item>发送表情二进制数据</item>
	</string-array>
	
	<string-array name="send_emoji_item_format">
	    <item>发送GIF图片</item>
	    <item>发送非GIF图片</item>
	</string-array>
	<string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    <string name="app_share">分享</string>
    <string name="app_cancel">取消</string>
     <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
</resources>
