<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="5dip"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="5dip" >

    <!-- 选择分享类型 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="内容类型" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioBtn_share_type_default"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textSize="10dp"
                android:text="默认" />

            <RadioButton
                android:id="@+id/radioBtn_share_type_audio"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="10dp"
                android:text="音乐分享" />

            <RadioButton
                android:id="@+id/radioBtn_share_type_image"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="10dp"
                android:text="纯图分享" />
            
            <RadioButton
                android:id="@+id/radioBtn_share_type_app"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="10dp"
                android:text="应用分享" />
        </RadioGroup>
    </LinearLayout>

    <!-- qzone特殊要求 -->

    <LinearLayout
        android:id="@+id/qzone_specail_radio_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_qzone_special_items"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="QQ空间: " />

        <CheckBox
            android:id="@+id/checkBox_qzone_auto_open"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Qzone弹窗" />

        <CheckBox
            android:id="@+id/checkBox_qzone_item_hide"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Qzone隐藏" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <!-- title -->

            <LinearLayout
                android:id="@+id/qqshare_title_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="title" />

                <EditText
                    android:id="@+id/shareqq_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="input title"
                    android:text="腾讯新闻分享标题" />
            </LinearLayout>

            <!-- summary -->

            <LinearLayout
                android:id="@+id/qqshare_summary_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="summary" />

                <EditText
                    android:id="@+id/shareqq_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="input summary"
                    android:text="新闻分享摘要内容,这里是QQ分享摘要测试, 字数不够? 再加点?" />
            </LinearLayout>

            <!-- audioUrl -->

            <LinearLayout
                android:id="@+id/qqshare_audioUrl_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="@string/qqshare_audio_url_lable" />

                <EditText
                    android:id="@+id/et_shareqq_audioUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qqshare_audioUrl_hint"
                    android:inputType="textUri|textMultiLine"
                    android:text="@string/qqshare_audioUrl_content" />
            </LinearLayout>

            <!-- targetUrl -->

            <LinearLayout
                android:id="@+id/qqshare_targetUrl_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="@string/qqshare_targetUrl_lable" />

                <EditText
                    android:id="@+id/shareqq_target_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qqshare_targetUrl_hint"
                    android:inputType="textUri|textMultiLine"
                    android:text="@string/qqshare_targetUrl_content" />
            </LinearLayout>

            <!-- imageUrl -->

            <LinearLayout
                android:id="@+id/qqshare_imageUrl_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:text="@string/qqshare_imageUrl_lable" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radioBtn_net_image"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/str_image_net" />

                        <RadioButton
                            android:id="@+id/radioBtn_local_image"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/str_image_local" />
                    </RadioGroup>
                </LinearLayout>

                <EditText
                    android:id="@+id/shareqq_image_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:hint="@string/qqshare_imageUrl_hint"
                    android:inputType="textUri|textMultiLine"
                    android:text="@string/qqshare_imageUrl_content" />
            </LinearLayout>

            <!-- appName -->

            <LinearLayout
                android:id="@+id/qqshare_appName_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="@string/qqshare_appName_lable" />

                <EditText
                    android:id="@+id/shareqq_app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qqshare_appName_hint"
                    android:text="@string/qqshare_appName_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/shareqq_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="commit" />
    </LinearLayout>

</LinearLayout>